--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "altv-quickstart-ts-vue",
-    "version": "5.0.1",
-    "description": "TypeScript with alt:V Made Easy",
+    "name": "tr-ts-framework",
+    "version": "0.0.1",
+    "description": "thanks to Stuyk",
     "scripts": {
         "[-] Server Deployment Commands (They All Do Different Things)": "",
         "build": "node ./scripts/compiler.js && npx vite build ./src-webviews && node ./scripts/copy.js && node ./scripts/transform.js",
@@ -12,15 +12,14 @@
         "vue-dev": "npx vite ./src-webviews --clearScreen=false --host=localhost --port=3000",
         "update": "altv-pkg d release"
     },
-    "author": "stuyk",
-    "license": "ISC",
+    "author": "TheBlokker",
+    "license": "MIT",
     "devDependencies": {
-        "@altv-vchat/types": "^1.0.5",
-        "@altv/types-client": "^2.5.3",
-        "@altv/types-natives": "^1.5.3",
-        "@altv/types-server": "^2.6.6",
-        "@altv/types-shared": "^1.4.2",
-        "@altv/types-webview": "^1.0.5",
+        "@altv/types-client": "^16.2.2",
+        "@altv/types-natives": "^16.2.0",
+        "@altv/types-server": "^16.2.1",
+        "@altv/types-shared": "^16.2.1",
+        "@altv/types-webview": "^16.2.1",
         "@swc/cli": "^0.1.62",
         "@swc/core": "^1.3.52",
         "@types/node": "^18.15.11",
